Sun Dec  8 10:22:38 2013  Aman Gupta <ruby@tmm1.net>

	* parse.y (register_symid_str): use fstrings in symbol table
	  [Bug #9171] [ruby-core:58656]
	* parse.y (rb_id2str): ditto
	* string.c (rb_fstring): create frozen_strings on first usage. this
	  allows rb_fstring() calls from the parser (before cString is created)
	* string.c (fstring_set_class_i): set klass on fstrings generated
	  before cString was defined
	* string.c (Init_String): convert frozen_strings table to String
	  objects after boot
	* ext/-test-/symbol/type.c (bug_sym_id2str): expose rb_id2str()
	* test/-ext-/symbol/test_type.rb (module Test_Symbol): verify symbol
	  table entries are fstrings

Sun Dec  8 10:24:20 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems.rb:  Update version for upcoming ruby 2.1.0 RC.

Sun Dec  8 10:21:36 2013  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems:  Update to RubyGems master 14749ce.  This fixes bugs
	  handling of gem dependencies lockfiles (Gemfile.lock).

	* test/rubygems:  ditto.

Sun Dec  8 09:40:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* array.c (rb_ary_or): use RHASH_TBL_RAW instead of RHASH_TBL

	* process.c (rb_execarg_fixup): use RHASH_TBL_RAW and insert write
	  barriers where appropriate

	* vm.c (kwmerge_i): use RHASH_TBL_RAW

	* vm.c (HASH_ASET): use rb_hash_aset instead of calling directly into
	  st_insert

Sat Dec  7 11:15:52 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* hash.c (rb_hash_reject): copy unrejected elements only to new hash,
	  so that the change on the original receiver can affect.
	  [ruby-core:58914] [Bug #9223]

Sat Dec  7 08:25:00 2013  Richo Healey  <richo@psych0tik.net>

	* test/ruby/test_struct.rb: Add regression test for question marks and
	  bangs in struct members. [Closes GH-468]

Fri Dec  6 19:33:39 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* class.c (rb_extract_keywords, rb_get_kwargs): move from
	  vm_insnhelper.c.

Fri Dec  6 19:18:02 2013  Koichi Sasada  <ko1@atdot.net>
