@@ -1288,9 +1288,7 @@ static int
 hash_aset_str(st_data_t *key, st_data_t *val, struct update_arg *arg, int existing)
 {
     if (!existing) {
-	VALUE str = (VALUE)*key;
-	if (!OBJ_FROZEN(str))
-	    *key = rb_fstring(str);
+	*key = rb_str_new_frozen(*key);
     }
     return hash_aset(key, val, arg, existing);
 }
